--- a/NLP for Disaster Tweets/Pre_Processing_tweets.ipynb
+++ b/NLP for Disaster Tweets/Pre_Processing_tweets.ipynb
@@ -389,7 +389,7 @@
         "\r\n",
         "**Default values**\r\n",
         "\r\n",
-        "Data, remove_url=True, extract_url=False, remove_punctutation=True, extract_hashtag=False, \r\n",
+        "remove_url=True, extract_url=False, remove_punctutation=True, extract_hashtag=False, \r\n",
         "                  lower_text_case=True, remove_nos=True, fix_common_tweet_errors=False,\r\n",
         "                  remove_hashtag=False, remove_stopwords=False, combine_text=False"
       ]
