--- a/NLP for Disaster Tweets/Pre_Processing_tweets.ipynb
+++ b/NLP for Disaster Tweets/Pre_Processing_tweets.ipynb
@@ -43,10 +43,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "8f9FO_opJRYX",
-        "outputId": "d44ad12a-29e2-4a29-d645-190103c80a2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "497c728f-b586-4d0b-c258-12cc5f0cdfd6"
       },
       "source": [
         "!pip install kaggle"
@@ -57,16 +57,16 @@
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: kaggle in /usr/local/lib/python3.6/dist-packages (1.5.10)\n",
-            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.6/dist-packages (from kaggle) (1.24.3)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.6/dist-packages (from kaggle) (4.41.1)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.6/dist-packages (from kaggle) (2020.12.5)\n",
-            "Requirement already satisfied: python-slugify in /usr/local/lib/python3.6/dist-packages (from kaggle) (4.0.1)\n",
-            "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.6/dist-packages (from kaggle) (1.15.0)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from kaggle) (2.23.0)\n",
             "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.6/dist-packages (from kaggle) (2.8.1)\n",
-            "Requirement already satisfied: text-unidecode>=1.3 in /usr/local/lib/python3.6/dist-packages (from python-slugify->kaggle) (1.3)\n",
+            "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.6/dist-packages (from kaggle) (1.15.0)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.6/dist-packages (from kaggle) (4.41.1)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from kaggle) (2.23.0)\n",
+            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.6/dist-packages (from kaggle) (1.24.3)\n",
+            "Requirement already satisfied: python-slugify in /usr/local/lib/python3.6/dist-packages (from kaggle) (4.0.1)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.6/dist-packages (from kaggle) (2020.12.5)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->kaggle) (2.10)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->kaggle) (3.0.4)\n"
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->kaggle) (3.0.4)\n",
+            "Requirement already satisfied: text-unidecode>=1.3 in /usr/local/lib/python3.6/dist-packages (from python-slugify->kaggle) (1.3)\n"
           ],
           "name": "stdout"
         }
@@ -87,10 +87,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "hMDzcnWlbJwf",
-        "outputId": "60c9ac8b-1a43-4fcf-ce85-871207c9cbeb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "70ac513a-5a29-4012-aa87-41dfe642b784"
       },
       "source": [
         "cd /root/.kaggle"
@@ -110,10 +110,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "6cf2HBAncOQm",
-        "outputId": "6543459d-3dc6-43d6-bcd8-9b849d430107",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "da7803e5-4c39-41a0-ce48-cb02f3adffb4"
       },
       "source": [
         "!pwd\n",
@@ -166,10 +166,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "scI7yYyEVgEV",
-        "outputId": "315ed5a9-9b19-44e4-b7f0-082077a41e83",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "534d2ca8-e1c3-44ee-f16f-58404c0d37a4"
       },
       "source": [
         "cd /content"
@@ -189,10 +189,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "zcdjZMHkcBTo",
-        "outputId": "f0e375a8-b5e8-4e4f-b79f-161ef5de900c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2f20581a-2b5a-4b03-8c33-afe74c764cfc"
       },
       "source": [
         "!kaggle competitions download -c nlp-getting-started"
@@ -203,15 +203,15 @@
           "output_type": "stream",
           "text": [
             "Warning: Looks like you're using an outdated API Version, please consider updating (server 1.5.10 / client 1.5.4)\n",
-            "Downloading test.csv to /content\n",
-            "\r  0% 0.00/411k [00:00<?, ?B/s]\n",
-            "100% 411k/411k [00:00<00:00, 60.5MB/s]\n",
-            "Downloading train.csv to /content\n",
-            "  0% 0.00/965k [00:00<?, ?B/s]\n",
-            "100% 965k/965k [00:00<00:00, 61.5MB/s]\n",
             "Downloading sample_submission.csv to /content\n",
             "  0% 0.00/22.2k [00:00<?, ?B/s]\n",
-            "100% 22.2k/22.2k [00:00<00:00, 19.8MB/s]\n"
+            "100% 22.2k/22.2k [00:00<00:00, 8.53MB/s]\n",
+            "Downloading train.csv to /content\n",
+            "  0% 0.00/965k [00:00<?, ?B/s]\n",
+            "100% 965k/965k [00:00<00:00, 62.9MB/s]\n",
+            "Downloading test.csv to /content\n",
+            "  0% 0.00/411k [00:00<?, ?B/s]\n",
+            "100% 411k/411k [00:00<00:00, 133MB/s]\n"
           ],
           "name": "stdout"
         }
@@ -253,7 +253,7 @@
         "pd.options.display.width = None\r\n",
         "pd.options.display.max_colwidth = None"
       ],
-      "execution_count": 46,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -273,7 +273,7 @@
       "source": [
         "Tweets = pd.read_csv(\"/content/train.csv\", encoding=\"utf-8\")"
       ],
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -327,7 +327,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TYPErxHAvVzs",
-        "outputId": "b884ea38-d41d-469d-946b-f879a1f39482"
+        "outputId": "7552be23-01bb-449c-e577-8d7e43923957"
       },
       "source": [
         "with open('contractions_dict.json', 'r') as fp:\r\n",
@@ -336,12 +336,12 @@
         "    repetitions_dict = json.load(fp)\r\n",
         "print('Contracted Words = ', len(contractions_dict), 'Repetition Letter Words = ',len(repetitions_dict))"
       ],
-      "execution_count": 70,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Contracted Words =  106 Repetition Letter Words =  13\n"
+            "Contracted Words =  107 Repetition Letter Words =  13\n"
           ],
           "name": "stdout"
         }
@@ -359,9 +359,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aSOomzbqQeh9"
+        "id": "aSOomzbqQeh9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "09fcb7b5-1784-4dcd-8c44-0492940a077b"
       },
       "source": [
+        "nltk.download('wordnet')\r\n",
+        "\r\n",
         "# To extract URLs as a seperate feature\r\n",
         "def ExtractURL(text):\r\n",
         "  match = re.findall('https?://\\S+|www\\.\\S+', text)\r\n",
@@ -472,8 +478,17 @@
         "def LemmatizeWords(text,lemmatizer):\r\n",
         "    return \" \".join([lemmatizer.lemmatize(word) for word in text.split()])"
       ],
-      "execution_count": 66,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/wordnet.zip.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -498,7 +513,9 @@
         "\r\n",
         "remove_url=True, extract_url=False, remove_punctutation=True, extract_hashtag=False, \r\n",
         "                  lower_text_case=True, remove_nos=True, fix_common_tweet_errors=False,\r\n",
-        "                  remove_hashtag=False, remove_stopwords=False, combine_text=False"
+        "                  remove_hashtag=False, remove_stopwords=False, combine_text=False,\r\n",
+        "                  extract_mentioned = True, remove_mentioned=False, stem_words=False,\r\n",
+        "                  lemmatize_words=False"
       ]
     },
     {
@@ -542,18 +559,15 @@
         "    stemmer = PorterStemmer()\r\n",
         "    Data['text_pre_pro'] = Data['text_pre_pro'].apply(lambda x:StemWords(x, stemmer))\r\n",
         "\r\n",
-        "  if lemmatize_words:\r\n",
-        "    if nltk.data.find('corpora/wordnet') == False:\r\n",
-        "      nltk.download('wordnet')\r\n",
-        "    lemmatizer = WordNetLemmatizer()\r\n",
-        "    \r\n",
+        "  if lemmatize_words:    \r\n",
+        "    lemmatizer = WordNetLemmatizer()  \r\n",
         "    Data['text_pre_pro'] = Data['text_pre_pro'].apply(lambda x:LemmatizeWords(x, lemmatizer))\r\n",
         "  Data = Data.assign(tokenized_processed=lambda x: (x['text_pre_pro'].apply(lambda x:tokenizer.tokenize(x))))\r\n",
         " \r\n",
         "\r\n",
         "  return Data"
       ],
-      "execution_count": 94,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -573,7 +587,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 367
         },
-        "outputId": "879c8117-ad78-4288-ea56-d1db3b975263"
+        "outputId": "5c81ee3f-fc5e-4245-8705-e6fd33cd44f8"
       },
       "source": [
         "Tweets_PreProcessed = CleanTextData(Tweets, extract_hashtag=True, \r\n",
@@ -581,7 +595,7 @@
         "                                        extract_url = True,\r\n",
         "                                        remove_mentioned=True,\r\n",
         "                                        stem_words=False,\r\n",
-        "                                        lemmatize_words=True\r\n",
+        "                                        lemmatize_words=False\r\n",
         "                                        )\r\n",
         "\r\n",
         "# Some ids of tweets which can be used to check if the prrocssing had the inteded\r\n",
@@ -593,7 +607,7 @@
         "\r\n",
         "Tweets_PreProcessed.head(4)"
       ],
-      "execution_count": 95,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -663,11 +677,11 @@
               "      <td>NaN</td>\n",
               "      <td>All residents asked to 'shelter in place' are being notified by officers. No other evacuation or shelter in place orders are expected</td>\n",
               "      <td>1</td>\n",
-              "      <td>all resident asked to shelter in place are being notified by officer no other evacuation or shelter in place order are expected</td>\n",
+              "      <td>all resident asked to ishelter in place are being notified by officer no other evacuation or shelter in place order are expected</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>[all, resident, asked, to, shelter, in, place, are, being, notified, by, officer, no, other, evacuation, or, shelter, in, place, order, are, expected]</td>\n",
+              "      <td>[all, resident, asked, to, ishelter, in, place, are, being, notified, by, officer, no, other, evacuation, or, shelter, in, place, order, are, expected]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -705,11 +719,11 @@
               "2       1   \n",
               "3       1   \n",
               "\n",
-              "                                                                                                                      text_pre_pro  \\\n",
-              "0                                                               our deed are the reason of this earthquake may allah forgive u all   \n",
-              "1                                                                                            forest fire near la ronge sask canada   \n",
-              "2  all resident asked to shelter in place are being notified by officer no other evacuation or shelter in place order are expected   \n",
-              "3                                                                           people receive wildfire evacuation order in california   \n",
+              "                                                                                                                       text_pre_pro  \\\n",
+              "0                                                                our deed are the reason of this earthquake may allah forgive u all   \n",
+              "1                                                                                             forest fire near la ronge sask canada   \n",
+              "2  all resident asked to ishelter in place are being notified by officer no other evacuation or shelter in place order are expected   \n",
+              "3                                                                            people receive wildfire evacuation order in california   \n",
               "\n",
               "        hashtag  url mentioned  \\\n",
               "0  [earthquake]  NaN       NaN   \n",
@@ -717,17 +731,17 @@
               "2           NaN  NaN       NaN   \n",
               "3   [wildfires]  NaN       NaN   \n",
               "\n",
-              "                                                                                                                                      tokenized_processed  \n",
-              "0                                                                        [our, deed, are, the, reason, of, this, earthquake, may, allah, forgive, u, all]  \n",
-              "1                                                                                                           [forest, fire, near, la, ronge, sask, canada]  \n",
-              "2  [all, resident, asked, to, shelter, in, place, are, being, notified, by, officer, no, other, evacuation, or, shelter, in, place, order, are, expected]  \n",
-              "3                                                                                          [people, receive, wildfire, evacuation, order, in, california]  "
+              "                                                                                                                                       tokenized_processed  \n",
+              "0                                                                         [our, deed, are, the, reason, of, this, earthquake, may, allah, forgive, u, all]  \n",
+              "1                                                                                                            [forest, fire, near, la, ronge, sask, canada]  \n",
+              "2  [all, resident, asked, to, ishelter, in, place, are, being, notified, by, officer, no, other, evacuation, or, shelter, in, place, order, are, expected]  \n",
+              "3                                                                                           [people, receive, wildfire, evacuation, order, in, california]  "
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 95
+          "execution_count": 22
         }
       ]
     },
