--- a/NLP for Disaster Tweets/Pre_Processing_tweets.ipynb
+++ b/NLP for Disaster Tweets/Pre_Processing_tweets.ipynb
@@ -51,7 +51,7 @@
       "source": [
         "!pip install kaggle"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,7 +80,7 @@
       "source": [
         "!mkdir ~/.kaggle"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
       "source": [
         "cd /root/.kaggle"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +119,7 @@
         "!pwd\n",
         "!ls"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +159,7 @@
       "source": [
         "!chmod 600 ~/.kaggle/kaggle.json"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -174,7 +174,7 @@
       "source": [
         "cd /content"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +197,7 @@
       "source": [
         "!kaggle competitions download -c nlp-getting-started"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +238,7 @@
       "source": [
         "!pip install autocorrect"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,7 +289,7 @@
         "pd.options.display.width = None\r\n",
         "pd.options.display.max_colwidth = None"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -309,7 +309,7 @@
       "source": [
         "Tweets = pd.read_csv(\"/content/train.csv\", encoding=\"utf-8\")"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -372,7 +372,7 @@
         "!wget https://raw.githubusercontent.com/Mikail1010/AI-ML-contests/main/NLP%20for%20Disaster%20Tweets/Helper%20dicts/html_tags_dict.json\r\n",
         "!wget https://raw.githubusercontent.com/Mikail1010/AI-ML-contests/main/NLP%20for%20Disaster%20Tweets/Helper%20dicts/chat_words_dict.json"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -462,7 +462,7 @@
         "print('Contracted Words =', len(contractions_dict), 'Repetition Letter Words =',len(repetitions_dict), 'Emoticons =',len(emoticons_dict),\r\n",
         "      'html_tags =', len(html_tags_list), 'Chat Words =', len(chat_words_dict))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,7 +507,7 @@
         "chat_words = re.compile('\\\\b' + '\\\\b|\\\\b'.join(list(chat_words_dict.keys())))\r\n",
         "spell = Speller(lang='en')"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,7 +572,7 @@
         "#   text = re.sub('<.*?>+', '', text)\r\n",
         "#   text = re.sub('\\w*\\d\\w*', '', text)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -642,7 +642,7 @@
         "    chat = [chat_words_dict[i] for i in match]\r\n",
         "  return chat"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -682,7 +682,7 @@
         "  text = Expand_Contractions(text)\r\n",
         "  return text"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -708,7 +708,7 @@
         "def LemmatizeWords(text,lemmatizer):\r\n",
         "    return \" \".join([lemmatizer.lemmatize(word) for word in text.split()])"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -805,7 +805,7 @@
         "\r\n",
         "  return Data"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -822,8 +822,7 @@
       "metadata": {
         "id": "57IHXMZ3y-jQ",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "e028611d-8d6b-435d-eb6e-d23b38b5e525"
       },
@@ -843,7 +842,7 @@
         "\r\n",
         "Tweets_PreProcessed.head(4)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -989,7 +988,7 @@
       "source": [
         "# Tweets_PreProcessed['mentioned'][Tweets_PreProcessed['mentioned'].notna()]"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1000,7 +999,7 @@
       "source": [
         "Tweets_PreProcessed.to_csv('train_processed.csv')"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1020,7 +1019,7 @@
       "source": [
         "# %reset"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1385,7 +1384,7 @@
         "      word_corpus.append(word)\r\n",
         "print(len(word_corpus))"
       ],
-      "execution_count": 379,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1413,7 +1412,7 @@
         "    two_letter_words.append(word)\r\n",
         "print((two_letter_words))"
       ],
-      "execution_count": 380,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1423,6 +1422,28 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qzhFcKLNlwFr"
+      },
+      "source": [
+        "#Other features to be tried"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P3P_TpXGly-C"
+      },
+      "source": [
+        "# To remove leading and ending spaces\r\n",
+        "\r\n",
+        "text = text.strip()"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
